--- a/index.html
+++ b/index.html
@@ -52,25 +52,19 @@
                     <h1 class="hero-title">
                         <span class="gradient-text">Xuefeng Li</span>
                     </h1>
-                    <h2 class="hero-subtitle">Senior Applied Scientist</h2>
-                    <p class="hero-description">
-                        6+ years of experience in machine learning research and industry applications, specializing in AI agents,
-                        weakly supervised learning, and LLM fine-tuning. Leading end-to-end AI prototype development from research
-                        to production-ready systems, with published research in top-tier conferences (ICML, IJCNN).
-                    </p>
                     <div class="hero-buttons">
                         <a href="#experience" class="btn btn-primary">View Experience</a>
                         <a href="#publications" class="btn btn-secondary">Publications</a>
                     </div>
                     <div class="hero-social">
-                        <a href="https://github.com/XuefengLi1" target="_blank" class="social-link">
-                            <i class="fab fa-github"></i>
-                        </a>
                         <a href="https://www.linkedin.com/in/xuefeng-li-sydney/" target="_blank" class="social-link">
                             <i class="fab fa-linkedin"></i>
                         </a>
                         <a href="https://scholar.google.com.au/citations?user=BSh0CXIAAAAJ&hl=en" target="_blank" class="social-link">
                             <i class="fas fa-graduation-cap"></i>
+                        </a>
+                        <a href="https://github.com/XuefengLi1" target="_blank" class="social-link">
+                            <i class="fab fa-github"></i>
                         </a>
                         <a href="mailto:ausmountain@gmail.com" class="social-link">
                             <i class="fas fa-envelope"></i>
@@ -79,7 +73,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="hero-avatar">
-                        <img src="images/Xuefeng_Li.png" alt="Xuefeng Li - Senior Applied Scientist" class="profile-image">
+                        <img src="images/Xuefeng_Li.png" alt="Xuefeng Li" class="profile-image">
                     </div>
                 </div>
             </div>
@@ -88,21 +82,6 @@
             <a href="#experience" class="scroll-indicator">
                 <i class="fas fa-chevron-down"></i>
             </a>
-        </div>
-    </section>
-
-
-
-    <!-- Experience Section -->
-    <section id="experience" class="experience">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">Professional Experience</h2>
-                <p class="section-subtitle">A journey through cutting-edge AI research and development</p>
-            </div>
-            <div class="timeline">
-                <!-- Experience items will be loaded here -->
-            </div>
         </div>
     </section>
 
@@ -118,6 +97,21 @@
             </div>
         </div>
     </section>
+
+    <!-- Experience Section -->
+    <section id="experience" class="experience">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Professional Experience</h2>
+                <p class="section-subtitle">A journey through cutting-edge AI research and development</p>
+            </div>
+            <div class="timeline">
+                <!-- Experience items will be loaded here -->
+            </div>
+        </div>
+    </section>
+
+
 
     <!-- Publications Section -->
     <section id="publications" class="publications">
